TestSuite/errors/err0121.pas
var s : set of char := (a:2;b:3);
begin
end.